# IV-MP-T4

./: .gitignore  LICENSE  Server.sln
ArusHook/: ScriptHook.vcxproj  ScriptingEnums.h  ScriptingNatives.h  UpgradeLog.XML  aScripting.h
Client/: CCam.h  CMakeLists.txt  CPad.cpp  CPad.h  CPadData.h  CPatcher.cpp  CPatcher.h  Client.vcxproj  Client.vcxproj.filters  ControlState.h  CustomFiberThread.cpp  CustomFiberThread.h  EntityMemory.cpp  EntityMemory.h  LuaVM.cpp  LuaVM.h  MainHook.cpp  MainHook.h  NetworkManager.cpp  NetworkManager.h  Offsets.h  Offsetscpp.cpp  PedStructureReference.cpp  PhysicalMemory.h  Scripting.h  Speedo.cpp  Speedo.h  animList.cpp  animList.h  cameraMemory.cpp  cameraMemory.h  chatCallbacks.cpp  chatCallbacks.h  chatInput.cpp  chatInput.h  chatWindow.cpp  chatWindow.h  colorHelper.cpp  colorHelper.h  dialogList.cpp  (+108 more)
Client/Copy/: CustomFiberThread.h  CustomFiberThread2.cpp  keyboard2.cpp
ClientLauncher/: ClientLauncher.vcxproj  easylogging++.h  main.cpp
ClientManager/: CXLiveHook.cpp  CXLiveHook.h  ClientManager.vcxproj  ClientManager.vcxproj.filters  CustomFiberThread.cpp  CustomFiberThread.h  Scripting.h  cPatcher.cpp  cPatcher.h  d3dDeviceProxy.cpp  d3dDeviceProxy.h  d3dHook.cpp  d3dHook.h  d3dProxy.cpp  d3dProxy.h  detours.lib  executionDefines.h  ivEnums.h  ivScripting.h  memory.h  memoryPipe.cpp  memoryPipe.h  natives.cpp  natives.h  nativesList.h  rageThread.cpp  rageThread.h
ClientManager/input/: CDirectInput8Proxy.cpp  CDirectInput8Proxy.h  CDirectInputDevice8Proxy.cpp  CDirectInputDevice8Proxy.h  CDirectInputHook.cpp  CDirectInputHook.h
GWEN/Include/Gwen/Controls/: ListBox.h
GWEN/Include/Gwen/Renderers/: DirectX9.h
GWEN/Include/Gwen/Skins/: TexturedBase.h
GWEN/Lib/: GWEN-Renderer-DirectX9.lib
RakNet2/: CCRakNetSlidingWindow.cpp  LibStatic_vc8.vcxproj  LibStatic_vc8.vcxproj.filters  RakNet.vcxproj  RakNet.vcxproj.filters  RakNetSocket2_Vita.cpp  VitaIncludes.cpp
Raknet/: CMakeLists.txt  LibStatic_vc8.vcxproj  LibStatic_vc8.vcxproj.filters  RakNet.sln  RakNet.vcxproj  RakNet.vcxproj.filters  ReadMe.txt  UpgradeLog.XML
SharedDefines/: easylogging++.cpp  easylogging++.h  exporting.h  json.h  packetsIds.h  paramHelper.cpp  paramHelper.h  truelog.h
clientLibs/: CMakeLists.txt  EFLCScripts.cpp  EFLCScripts.h  Main.cpp  clientLibs.vcxproj  clientLibs.vcxproj.filters  d3d.cpp  d3d.h  dumpManager.h  easylogging++.h  execution.cpp  execution.h  gameWindow.cpp  gameWindow.h  keyHook.h
ivmpGameLauncher2/: CMakeLists.txt  draw.cpp  draw.h  easylogging++.h  gameChecks.cpp  gameChecks.h  ivTarget.h  ivmpGameLauncher2.aps  ivmpGameLauncher2.rc  ivmpGameLauncher2.vcxproj  ivmpGameLauncher2.vcxproj.filters  main.cpp  memoryPipe.cpp  memoryPipe.h  resource.h  resource.rc  streamHandler.cpp  streamHandler.h  version.cpp  version.h
ivmpHackLauncher/: easylogging++.h  ivmpHackLauncher.vcxproj  main.cpp
ivmpServer/: CMakeLists.txt  apiBlips.cpp  apiCheckPoints.cpp  apiColoredChat.cpp  apiDebugTask.cpp  apiDebugTask.h  apiDialog.cpp  apiMath.cpp  apiNpc.cpp  apiObjects.cpp  apiParamHelper.cpp  apiPlayerInputs.cpp  apiPlayerManager.cpp  apiPlayerManager.h  apiPlayers.cpp  apiVehicle.cpp  apiWorld.cpp  blipController.h  chatFunctions.cpp  checkPointsController.cpp  checkPointsController.h  dialogManager.h  entitySpawned.cpp  entitySpawned.h  inVehicleInputs.h  ivmpServer.vcxproj  ivmpServer.vcxproj.filters  mainNetwork.cpp  networkManager.cpp  networkManager.h  npcChar.cpp  npcChar.h  npcManager.cpp  npcManager.h  objectsController.cpp  objectsController.h  onFootInputs.h  playerConnectionState.cpp  playerConnectionState.h  playerFunctions.h  (+32 more)
ivmpServer/API/: apiBlips.h  apiCheckPoints.h  apiColoredChat.h  apiDialog.h  apiMath.h  apiNpc.h  apiObjects.h  apiParamHelper.h  apiPlayer.h  apiPlayerEvents.h  apiPlayerInputs.h  apiVehicle.h  apiVehicleEvents.h  apiWorld.h  mainNetwork.h  playerList.h  vehicleList.h
ivmpServerMasterCon/: CMakeLists.txt  includes.cpp  includes.h  ivmpServerMasterCon.vcxproj  ivmpServerMasterCon.vcxproj.filters
masterList/: CMakeLists.txt  main.cpp  masterList.vcxproj  masterList.vcxproj.filters  pipeHandler.cpp  pipeHandler.h
masterListWeb/: Program.cs  Startup.cs
masterListWeb/Controllers/: ListController.cs
masterListWeb/Properties/: launchSettings.json
