cmake_minimum_required(VERSION 3.12.2)

project(RakNet)

set(CMAKE_CONFIGURATION_TYPES "Release"
    CACHE STRING "Configuration types" FORCE)

add_library(RakNet STATIC
  ../RakNet2/_FindFirst.cpp
  ../RakNet2/_FindFirst.h
  ../RakNet2/AutopatcherPatchContext.h
  ../RakNet2/AutopatcherRepositoryInterface.h
  ../RakNet2/Base64Encoder.cpp
  ../RakNet2/Base64Encoder.h
  ../RakNet2/BitStream.cpp
  ../RakNet2/BitStream.h
  ../RakNet2/CCRakNetSlidingWindow.cpp
  ../RakNet2/CCRakNetSlidingWindow.h
  ../RakNet2/CCRakNetUDT.cpp
  ../RakNet2/CCRakNetUDT.h
  ../RakNet2/CheckSum.cpp
  ../RakNet2/CheckSum.h
  ../RakNet2/CloudClient.cpp
  ../RakNet2/CloudClient.h
  ../RakNet2/CloudCommon.cpp
  ../RakNet2/CloudCommon.h
  ../RakNet2/CloudServer.cpp
  ../RakNet2/CloudServer.h
  ../RakNet2/CommandParserInterface.cpp
  ../RakNet2/CommandParserInterface.h
  ../RakNet2/ConnectionGraph2.cpp
  ../RakNet2/ConnectionGraph2.h
  ../RakNet2/ConsoleServer.cpp
  ../RakNet2/ConsoleServer.h
  ../RakNet2/DataCompressor.cpp
  ../RakNet2/DataCompressor.h
  ../RakNet2/DirectoryDeltaTransfer.cpp
  ../RakNet2/DirectoryDeltaTransfer.h
  ../RakNet2/DS_BinarySearchTree.h
  ../RakNet2/DS_BPlusTree.h
  ../RakNet2/DS_BytePool.cpp
  ../RakNet2/DS_BytePool.h
  ../RakNet2/DS_ByteQueue.cpp
  ../RakNet2/DS_ByteQueue.h
  ../RakNet2/DS_Hash.h
  ../RakNet2/DS_Heap.h
  ../RakNet2/DS_HuffmanEncodingTree.cpp
  ../RakNet2/DS_HuffmanEncodingTree.h
  ../RakNet2/DS_HuffmanEncodingTreeFactory.h
  ../RakNet2/DS_HuffmanEncodingTreeNode.h
  ../RakNet2/DS_LinkedList.h
  ../RakNet2/DS_List.h
  ../RakNet2/DS_Map.h
  ../RakNet2/DS_MemoryPool.h
  ../RakNet2/DS_Multilist.h
  ../RakNet2/DS_OrderedChannelHeap.h
  ../RakNet2/DS_OrderedList.h
  ../RakNet2/DS_Queue.h
  ../RakNet2/DS_QueueLinkedList.h
  ../RakNet2/DS_RangeList.h
  ../RakNet2/DS_Table.cpp
  ../RakNet2/DS_Table.h
  ../RakNet2/DS_ThreadsafeAllocatingQueue.h
  ../RakNet2/DS_Tree.h
  ../RakNet2/DS_WeightedGraph.h
  ../RakNet2/DynDNS.cpp
  ../RakNet2/DynDNS.h
  ../RakNet2/EmailSender.cpp
  ../RakNet2/EmailSender.h
  ../RakNet2/EmptyHeader.h
  ../RakNet2/EncodeClassName.cpp
  ../RakNet2/EpochTimeToString.cpp
  ../RakNet2/EpochTimeToString.h
  ../RakNet2/Export.h
  ../RakNet2/FileList.cpp
  ../RakNet2/FileList.h
  ../RakNet2/FileListNodeContext.h
  ../RakNet2/FileListTransfer.cpp
  ../RakNet2/FileListTransfer.h
  ../RakNet2/FileListTransferCBInterface.h
  ../RakNet2/FileOperations.cpp
  ../RakNet2/FileOperations.h
  ../RakNet2/FormatString.cpp
  ../RakNet2/FormatString.h
  ../RakNet2/FullyConnectedMesh2.cpp
  ../RakNet2/FullyConnectedMesh2.h
  ../RakNet2/Getche.cpp
  ../RakNet2/Getche.h
  ../RakNet2/Gets.cpp
  ../RakNet2/Gets.h
  ../RakNet2/GetTime.cpp
  ../RakNet2/GetTime.h
  ../RakNet2/gettimeofday.cpp
  ../RakNet2/gettimeofday.h
  ../RakNet2/GridSectorizer.cpp
  ../RakNet2/GridSectorizer.h
  ../RakNet2/HTTPConnection.cpp
  ../RakNet2/HTTPConnection.h
  ../RakNet2/HTTPConnection2.cpp
  ../RakNet2/HTTPConnection2.h
  ../RakNet2/IncrementalReadInterface.cpp
  ../RakNet2/IncrementalReadInterface.h
  ../RakNet2/InternalPacket.h
  ../RakNet2/Itoa.cpp
  ../RakNet2/Itoa.h
  ../RakNet2/Kbhit.h
  ../RakNet2/LinuxStrings.cpp
  ../RakNet2/LinuxStrings.h
  ../RakNet2/LocklessTypes.cpp
  ../RakNet2/LocklessTypes.h
  ../RakNet2/LogCommandParser.cpp
  ../RakNet2/LogCommandParser.h
  ../RakNet2/MessageFilter.cpp
  ../RakNet2/MessageFilter.h
  ../RakNet2/MessageIdentifiers.h
  ../RakNet2/MTUSize.h
  ../RakNet2/NativeFeatureIncludes.h
  ../RakNet2/NativeFeatureIncludesOverrides.h
  ../RakNet2/NativeTypes.h
  ../RakNet2/NatPunchthroughClient.cpp
  ../RakNet2/NatPunchthroughClient.h
  ../RakNet2/NatPunchthroughServer.cpp
  ../RakNet2/NatPunchthroughServer.h
  ../RakNet2/NatTypeDetectionClient.cpp
  ../RakNet2/NatTypeDetectionClient.h
  ../RakNet2/NatTypeDetectionCommon.cpp
  ../RakNet2/NatTypeDetectionCommon.h
  ../RakNet2/NatTypeDetectionServer.cpp
  ../RakNet2/NatTypeDetectionServer.h
  ../RakNet2/NetworkIDManager.cpp
  ../RakNet2/NetworkIDManager.h
  ../RakNet2/NetworkIDObject.cpp
  ../RakNet2/NetworkIDObject.h
  ../RakNet2/PacketConsoleLogger.cpp
  ../RakNet2/PacketConsoleLogger.h
  ../RakNet2/PacketFileLogger.cpp
  ../RakNet2/PacketFileLogger.h
  ../RakNet2/PacketizedTCP.cpp
  ../RakNet2/PacketizedTCP.h
  ../RakNet2/PacketLogger.cpp
  ../RakNet2/PacketLogger.h
  ../RakNet2/PacketOutputWindowLogger.cpp
  ../RakNet2/PacketOutputWindowLogger.h
  ../RakNet2/PacketPool.h
  ../RakNet2/PacketPriority.h
  ../RakNet2/PluginInterface2.cpp
  ../RakNet2/PluginInterface2.h
  ../RakNet2/PS3Includes.h
  ../RakNet2/Rackspace.cpp
  ../RakNet2/Rackspace.h
  ../RakNet2/RakAlloca.h
  ../RakNet2/RakAssert.h
  ../RakNet2/RakMemoryOverride.cpp
  ../RakNet2/RakMemoryOverride.h
  ../RakNet2/RakNetCommandParser.cpp
  ../RakNet2/RakNetCommandParser.h
  ../RakNet2/RakNetDefines.h
  ../RakNet2/RakNetDefinesOverrides.h
  ../RakNet2/RakNetSmartPtr.h
  ../RakNet2/RakNetSocket.cpp
  ../RakNet2/RakNetSocket.h
  ../RakNet2/RakNetSocket2.cpp
  ../RakNet2/RakNetSocket2.h
  ../RakNet2/RakNetSocket2_360_720.cpp
  ../RakNet2/RakNetSocket2_Berkley.cpp
  ../RakNet2/RakNetSocket2_Berkley_NativeClient.cpp
  ../RakNet2/RakNetSocket2_NativeClient.cpp
  ../RakNet2/RakNetSocket2_PS3_PS4.cpp
  ../RakNet2/RakNetSocket2_Vita.cpp
  ../RakNet2/RakNetSocket2_Windows_Linux.cpp
  ../RakNet2/RakNetSocket2_Windows_Linux_360.cpp
  ../RakNet2/RakNetSocket2_WindowsStore8.cpp
  ../RakNet2/RakNetStatistics.cpp
  ../RakNet2/RakNetStatistics.h
  ../RakNet2/RakNetTime.h
  ../RakNet2/RakNetTransport2.cpp
  ../RakNet2/RakNetTransport2.h
  ../RakNet2/RakNetTypes.cpp
  ../RakNet2/RakNetTypes.h
  ../RakNet2/RakNetVersion.h
  ../RakNet2/RakPeer.cpp
  ../RakNet2/RakPeer.h
  ../RakNet2/RakPeerInterface.h
  ../RakNet2/RakSleep.cpp
  ../RakNet2/RakSleep.h
  ../RakNet2/RakString.cpp
  ../RakNet2/RakString.h
  ../RakNet2/RakThread.cpp
  ../RakNet2/RakThread.h
  ../RakNet2/RakWString.cpp
  ../RakNet2/RakWString.h
  ../RakNet2/Rand.cpp
  ../RakNet2/Rand.h
  ../RakNet2/rdlmalloc.cpp
  ../RakNet2/rdlmalloc.h
  ../RakNet2/rdlmalloc-options.h
  ../RakNet2/ReadyEvent.cpp
  ../RakNet2/ReadyEvent.h
  ../RakNet2/RefCountedObj.h
  ../RakNet2/RelayPlugin.cpp
  ../RakNet2/RelayPlugin.h
  ../RakNet2/ReliabilityLayer.cpp
  ../RakNet2/ReliabilityLayer.h
  ../RakNet2/ReplicaEnums.h
  ../RakNet2/ReplicaManager3.cpp
  ../RakNet2/ReplicaManager3.h
  ../RakNet2/Router2.cpp
  ../RakNet2/Router2.h
  ../RakNet2/RPC4Plugin.cpp
  ../RakNet2/RPC4Plugin.h
  ../RakNet2/SecureHandshake.cpp
  ../RakNet2/SecureHandshake.h
  ../RakNet2/SendToThread.cpp
  ../RakNet2/SendToThread.h
  ../RakNet2/SHA1.cpp
  ../RakNet2/SHA1.h
  ../RakNet2/SignaledEvent.cpp
  ../RakNet2/SignaledEvent.h
  ../RakNet2/SimpleMutex.cpp
  ../RakNet2/SimpleMutex.h
  ../RakNet2/SimpleTCPServer.h
  ../RakNet2/SingleProducerConsumer.h
  ../RakNet2/SocketDefines.h
  ../RakNet2/SocketIncludes.h
  ../RakNet2/SocketLayer.cpp
  ../RakNet2/SocketLayer.h
  ../RakNet2/StatisticsHistory.cpp
  ../RakNet2/StatisticsHistory.h
  ../RakNet2/StringCompressor.cpp
  ../RakNet2/StringCompressor.h
  ../RakNet2/StringTable.cpp
  ../RakNet2/StringTable.h
  ../RakNet2/SuperFastHash.cpp
  ../RakNet2/SuperFastHash.h
  ../RakNet2/TableSerializer.cpp
  ../RakNet2/TableSerializer.h
  ../RakNet2/TCPInterface.cpp
  ../RakNet2/TCPInterface.h
  ../RakNet2/TeamBalancer.cpp
  ../RakNet2/TeamBalancer.h
  ../RakNet2/TeamManager.cpp
  ../RakNet2/TeamManager.h
  ../RakNet2/TelnetTransport.cpp
  ../RakNet2/TelnetTransport.h
  ../RakNet2/ThreadPool.h
  ../RakNet2/ThreadsafePacketLogger.cpp
  ../RakNet2/ThreadsafePacketLogger.h
  ../RakNet2/TransportInterface.h
  ../RakNet2/TwoWayAuthentication.cpp
  ../RakNet2/TwoWayAuthentication.h
  ../RakNet2/UDPForwarder.cpp
  ../RakNet2/UDPForwarder.h
  ../RakNet2/UDPProxyClient.cpp
  ../RakNet2/UDPProxyClient.h
  ../RakNet2/UDPProxyCommon.h
  ../RakNet2/UDPProxyCoordinator.cpp
  ../RakNet2/UDPProxyCoordinator.h
  ../RakNet2/UDPProxyServer.cpp
  ../RakNet2/UDPProxyServer.h
  ../RakNet2/VariableDeltaSerializer.cpp
  ../RakNet2/VariableDeltaSerializer.h
  ../RakNet2/VariableListDeltaTracker.cpp
  ../RakNet2/VariableListDeltaTracker.h
  ../RakNet2/VariadicSQLParser.cpp
  ../RakNet2/VariadicSQLParser.h
  ../RakNet2/VitaIncludes.cpp
  ../RakNet2/VitaIncludes.h
  ../RakNet2/WindowsIncludes.h
  ../RakNet2/WSAStartupSingleton.cpp
  ../RakNet2/WSAStartupSingleton.h
  ../RakNet2/XBox360Includes.h
)
# Output file name
set_target_properties(RakNet
  PROPERTIES
  OUTPUT_NAME_RELEASE RakNet2
)

# Additional include directories
set_property(TARGET RakNet
  APPEND PROPERTY INCLUDE_DIRECTORIES
  $<$<CONFIG:Release>:
    ./DependentExtensions/udt4/src;
    ./DependentExtensions/openssl-0.9.8g>
)

# Preprocessor definitions
target_compile_definitions(RakNet PRIVATE
  $<$<CONFIG:Release>:_MBCS;WIN32;NDEBUG;_LIB>
)

# Minimal rebuild
if (MSVC)
  target_compile_options(RakNet PRIVATE
    "$<$<CONFIG:Release>:/Gm->"
  )
endif ()

# Precompiled header files
if (MSVC)
  target_compile_options(RakNet PRIVATE
    ""
  )
endif ()
